Hice html y css

--- a/index.html
+++ b/index.html
@@ -8,6 +8,45 @@
     <title>Tablero Polaroid</title>
 </head>
 <body>
-    
+
+<main>
+<div class="contenedor">
+    <div class="tarjeta summer">
+        <img src="/img/summer.jpg">
+        <p>Summer 2014</p>
+    </div>
+
+    <div class="tarjeta brooklyn">
+        <img src="/img/brooklyn.jpg">
+        <p>Brooklyn</p>
+    </div>
+
+    <div class="tarjeta holidays">
+        <img src="/img/holidays.jpg">
+        <p>Holidays 2008</p>
+    </div>
+
+    <div class="tarjeta mountains">
+        <img src="/img/mountains.jpg">
+        <p>Mountains</p>
+    </div>
+
+    <div class="tarjeta park">
+        <img src="/img/park.jpg">
+        <p>The Park</p>
+    </div>
+
+    <div class="tarjeta sunrise">
+        <img src="/img/Sunrise.jpg">
+        <p>Sunrise</p>
+    </div>
+
+    <div class="tarjeta valley">
+        <img src="/img/valley.jpg">
+        <p>The Valley</p>
+    </div>
+
+</div>
+</main>
 </body>
 </html>
